add btn submenu and event trigger

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-button-menu></app-button-menu>
+<app-button-menu [btnTitle] = "title"  [btnMenuList]= "inputBtn1" (BtnEvent)="triggerBtnEvent($event)"></app-button-menu>
+
+<div *ngFor="let i of inputBtn1">1</div>
+{{topic}}
