gen navbar module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-button-menu [btnTitle] = "title"  [btnMenuList]= "inputBtn1" (BtnEvent)="triggerBtnEvent($event)"></app-button-menu>
-
-{{topic}}
+<app-navbar></app-navbar>
