--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,3 +1,3 @@
-<app-button-menu [btnTitle] = "title"  [btnMenuList]= "inputBtn1" (BtnEvent)="triggerBtnEvent($event)"></app-button-menu>
-123
+<app-button-menu [btnTitle] = "title1"  [btnMenuList]= "inputBtn1" (BtnEvent)="triggerBtnEvent($event)"></app-button-menu>
+
 {{topic}}
