--- a/src/components/button-menu/button-menu.component.html
+++ b/src/components/button-menu/button-menu.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button mat-button class="btn btn-primary" [matMenuTriggerFor]="option1">{{btnTitle}}</button>
+    <button mat-button class="btn" [matMenuTriggerFor]="option1">{{btnTitle}}</button>
 </div>
 
 <mat-menu #option1="matMenu" >
