--- a/src/pages/p00-main/p00-main.component.html
+++ b/src/pages/p00-main/p00-main.component.html
@@ -1,1 +1,8 @@
-<p>p00-main works!</p>
+<div class="d-flex justify-content-center">
+    <p>p00-main works!</p>
+</div>
+<div class="d-flex justify-content-center">
+    <div class="col-10">
+        <app-main-page-grid [btnImport]="btnImport" ></app-main-page-grid>    
+    </div>
+</div>
