--- a/src/components/main-page-grid/main-page-grid.component.html
+++ b/src/components/main-page-grid/main-page-grid.component.html
@@ -1,3 +1,3 @@
-<mat-grid-list cols="3" rowHeight="240px" gutterSize="40px">
+<mat-grid-list *ngIf = "subBtnGrid.length > 0" cols="3" rowHeight="240px" gutterSize="40px">
     <mat-grid-tile class="d-flex  justify-content-between btn btn-primary" *ngFor="let i of subBtnGrid"> {{i.btnTitleName}} </mat-grid-tile>
 </mat-grid-list>
