--- a/src/form/p03-purchase/form-lv1/form03-lv1.component.html
+++ b/src/form/p03-purchase/form-lv1/form03-lv1.component.html
@@ -62,10 +62,10 @@
 
     <div class="d-flex flex-column justify-content-between">
         <div class="d-flex flex-column">
-            <div><button class="btn btn-primary" >Save</button></div>
-            <div><button class="btn btn-info" >Update</button></div>
-            <div><button class="btn btn-warning" >Clear</button></div>
-            <div><button class="btn btn-danger" >Cancel</button></div>
+            <div><button style="width: 80px;" class="btn btn-primary" >Save</button></div>
+            <div><button style="width: 80px;" class="btn btn-info" >Update</button></div>
+            <div><button style="width: 80px;" class="btn btn-warning" >Clear</button></div>
+            <div><button style="width: 80px;" class="btn btn-danger" >Cancel</button></div>
             
             
         </div>
