--- a/src/form/p03-purchase/form-lv1/form03-lv1.component.html
+++ b/src/form/p03-purchase/form-lv1/form03-lv1.component.html
@@ -1,115 +1,109 @@
 <p>form-lv1 works!</p>
 
-<form class="d-flex">   
-    <div class="col-3">
-        <div class="d-flex flex-column">
-            <mat-form-field appearance="fill">
-                <mat-label>Select</mat-label>
+<form class="d-flex">  
+    <div class="col-6">
+        <div class="col-12">  
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Select Supplier</mat-label>
                 <mat-select>
                     <mat-option value="one">First option</mat-option>
                     <mat-option value="two">Second option</mat-option>
                 </mat-select>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
-                <mat-label>Quantity</mat-label>
-                <input matInput>
+            <mat-form-field class="col-6" appearance="fill">
+                <mat-label>Select Category</mat-label>
+                <mat-select>
+                    <mat-option value="one">First option</mat-option>
+                    <mat-option value="two">Second option</mat-option>
+                </mat-select>
             </mat-form-field>
             
-            <mat-form-field appearance="fill">
-                <mat-label>Sale Unit Price</mat-label>
-                <input matInput>
+            <mat-form-field class="col-6" appearance="fill">
+                <mat-label>Select Product</mat-label>
+                <mat-select>
+                    <mat-option value="one">First option</mat-option>
+                    <mat-option value="two">Second option</mat-option>
+                </mat-select>
             </mat-form-field>
-            
-            <mat-form-field appearance="fill">
-                <mat-label>Purchase Unit Price</mat-label>
-                <input matInput>
+
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Select Account</mat-label>
+                <mat-select>
+                    <mat-option value="one">First option</mat-option>
+                    <mat-option value="two">Second option</mat-option>
+                </mat-select>
             </mat-form-field>
-            
-            <mat-form-field appearance="fill">
-                <mat-label>Stock Threshold</mat-label>
-                <input matInput>
-            </mat-form-field>
-        </div>
+
+            <div>
+                <mat-form-field class="col-6" appearance="fill">
+                    <mat-label>Expiry Date</mat-label>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                  </mat-form-field>
+                  
+                  <mat-form-field class="col-6" appearance="fill">
+                    <mat-label>ManuFactured Date</mat-label>
+                    <input matInput [matDatepicker]="picker1">
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                  </mat-form-field>     
+            </div>
+
+            <div>
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Sale Unit Price</mat-label>
+                    <input matInput>
+                </mat-form-field>
+                
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Purchase Unit Price</mat-label>
+                    <input matInput>
+                </mat-form-field>
+                
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Stock Threshold</mat-label>
+                    <input matInput>
+                </mat-form-field>
+            </div>
+        </div> 
     </div>
 
-    <div class="col-3">
-        <div class="d-flex flex-column">
+    <div class="col-6">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
 
-
-            <mat-form-field appearance="fill">
-                <mat-label>Expiry Date</mat-label>
-                <input matInput [matDatepicker]="picker">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-                <mat-hint>MM/DD/YYYY</mat-hint>
-              </mat-form-field>
-              
-              <mat-form-field appearance="fill">
-                <mat-label>ManuFactured Date</mat-label>
-                <input matInput [matDatepicker]="picker1">
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
-                <mat-hint>MM/DD/YYYY</mat-hint>
-              </mat-form-field>           
-             
-            <mat-form-field appearance="fill">
-                <mat-label>Description</mat-label>
-                <textarea style="height: 150px;" matInput></textarea>
-            </mat-form-field>       
-        </div>
-    </div>
-
-    <div class="d-flex flex-column justify-content-between">
-        <div class="d-flex flex-column">
-            <div><button style="width: 80px;" class="btn btn-primary" >Save</button></div>
-            <div><button style="width: 80px;" class="btn btn-info" >Update</button></div>
-            <div><button style="width: 80px;" class="btn btn-warning" >Clear</button></div>
-            <div><button style="width: 80px;" class="btn btn-danger" >Cancel</button></div>
-            
-            
-        </div>
-        
-        <div class="mb-4"><button class="btn btn-danger" >Print Catalog</button></div>
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+          
+            <!-- Position Column -->
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef> No. </th>
+              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+          
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+          
+            <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+              <th mat-header-cell *matHeaderCellDef> Weight </th>
+              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+          
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+              <th mat-header-cell *matHeaderCellDef> Symbol </th>
+              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+          
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
     </div>
 </form>
-
-<div class="d-flex">
-    <mat-form-field appearance="fill">
-        <mat-label>Search</mat-label>
-        <input matInput>
-    </mat-form-field>
-</div>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
