--- a/src/form/p05-stock/form-lv1/form05-lv1.component.html
+++ b/src/form/p05-stock/form-lv1/form05-lv1.component.html
@@ -4,7 +4,7 @@
     <div class="col-3">
         <div class="d-flex flex-column">
             <mat-form-field appearance="fill">
-                <mat-label>Select</mat-label>
+                <mat-label>Category</mat-label>
                 <mat-select>
                     <mat-option value="one">First option</mat-option>
                     <mat-option value="two">Second option</mat-option>
