--- a/src/form/p04-setting/form-lv2/form03-lv2.component.html
+++ b/src/form/p04-setting/form-lv2/form03-lv2.component.html
@@ -1,7 +1,8 @@
 <p>User Registeration</p>
 
-<!-- <form class="d-flex">   -->
-    <div class="col-12">
+<form>  
+<p>Personal Details</p>
+
         <div class="col-12">  
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select User Type</mat-label>
@@ -13,14 +14,51 @@
            
             <div>
                 <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Customer Name</mat-label>
+                    <mat-label>Full Name</mat-label>
                     <input matInput>
                 </mat-form-field>
+            </div>
+
             <div>
+                <mat-form-field class="col-12" appearance="fill">
+                    <mat-label>Contact No</mat-label>
+                    <input matInput>
+                </mat-form-field>
+            </div>
 
-   
-        </div> 
+            <div>
+                <mat-form-field class="col-12" appearance="fill">
+                    <mat-label>Email</mat-label>
+                    <input matInput>
+                </mat-form-field>
+            </div>
+        </div>
+
+<p>Enter Name Password</p>
+    <div class="col-12">  
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Username</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Password</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Confirm Password</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+    </div> 
+    <div>
+        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-danger">Clear</button>
     </div>
-
-
-<!-- </form> -->
+</form>
