create nest outlet p01 sales p05 stock

--- a/src/pages/p01-sales/p01-sales.component.html
+++ b/src/pages/p01-sales/p01-sales.component.html
@@ -1,6 +1,3 @@
 <p>p01-sales works!</p>
 
-<app-form03-lv1></app-form03-lv1>
-<app-form03-lv2></app-form03-lv2>
-<app-form03-lv3></app-form03-lv3>
-<app-form03-lv4></app-form03-lv4>
+<router-outlet></router-outlet>
