--- a/src/form/p04-setting/addUser/form04-user.component.html
+++ b/src/form/p04-setting/addUser/form04-user.component.html
@@ -1,60 +1,56 @@
 <p>{{title04}}</p>
 
-<div class="d-flex">  
+<div class="d-flex">
     <div class="col-6">
-        <div class="col-12">             
-            <div>
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Customer Name</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            <div>
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>First Name</mat-label>
+            <input (blur)="firstNameChange($event)" matInput>
+        </mat-form-field>
 
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Contact No</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div> 
-                
-            <div>
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Last Name</mat-label>
+            <input (blur)="lastNameChange($event)" matInput>
+        </mat-form-field>
 
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Customer Area</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div>
-            </div>
-        </div> 
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Select User Type</mat-label>
+            <mat-select (selectionChange)="userTypeChange($event.value)">
+                <div *ngFor="let i of userTypeDropDown">
+                    <mat-option [value]="i.userType">{{ i.userType }}</mat-option>
+                </div>
+            </mat-select>
+        </mat-form-field>
+     </div>
+
+    <div class="col-6">
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Contact No</mat-label>
+            <input (blur)="ContactChange($event)" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Username</mat-label>
+            <input (blur)="UsernameChange($event)" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Password</mat-label>
+            <input (blur)="PasswordChange($event)" matInput>
+        </mat-form-field>
     </div>
-
-    <div class="col-6">
-        <div>
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Address</mat-label>
-                <textarea style="height: 150px;" matInput></textarea>
-            </mat-form-field>
-        </div>
-
-        <div>
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Description</mat-label>
-                <textarea style="height: 150px;" matInput></textarea>
-            </mat-form-field>
-        </div>
-    </div>    
 </div>
 
 <div class="col-12">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
-        
+
         <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
-        
+
         <ng-container matColumnDef="user_id">
             <th mat-header-cell *matHeaderCellDef> User ID </th>
             <td mat-cell *matCellDef="let element"> {{element.user_id}} </td>
         </ng-container>
-        
+
 
         <ng-container matColumnDef="first_name">
             <th mat-header-cell *matHeaderCellDef> First Name </th>
@@ -80,9 +76,8 @@
             <th mat-header-cell *matHeaderCellDef> Username </th>
             <td mat-cell *matCellDef="let element"> {{element.username}} </td>
         </ng-container>
-                
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+    </table>
 </div>
-
