fix clear data user

--- a/src/form/p04-setting/addUser/form04-user.component.html
+++ b/src/form/p04-setting/addUser/form04-user.component.html
@@ -4,12 +4,12 @@
     <div class="col-6">
         <mat-form-field class="col-12" appearance="fill">
             <mat-label>First Name</mat-label>
-            <input (ngModel)="currentUser.first_name" (blur)="firstNameChange($event)" matInput>
+            <input [value]="currentUser.first_name" (blur)="firstNameChange($event)" matInput>
         </mat-form-field>
 
         <mat-form-field class="col-12" appearance="fill">
             <mat-label>Last Name</mat-label>
-            <input (blur)="lastNameChange($event)" matInput>
+            <input [value]="currentUser.last_name" (blur)="lastNameChange($event)" matInput>
         </mat-form-field>
 
         <mat-form-field class="col-12" appearance="fill">
@@ -25,17 +25,17 @@
     <div class="col-6">
         <mat-form-field class="col-12" appearance="fill">
             <mat-label>Contact No</mat-label>
-            <input (blur)="ContactChange($event)" matInput>
+            <input [value]="currentUser.contact_no" (blur)="ContactChange($event)" matInput>
         </mat-form-field>
 
         <mat-form-field class="col-12" appearance="fill">
             <mat-label>Username</mat-label>
-            <input (blur)="UsernameChange($event)" matInput>
+            <input [value]="currentUser.username" (blur)="UsernameChange($event)" matInput>
         </mat-form-field>
 
         <mat-form-field class="col-12" appearance="fill">
             <mat-label>Password</mat-label>
-            <input (blur)="PasswordChange($event)" matInput>
+            <input [value]="currentUser.password" (blur)="PasswordChange($event)" matInput>
         </mat-form-field>
     </div>
 </div>
