--- a/src/form/p04-setting/addUser/form04-user.component.html
+++ b/src/form/p04-setting/addUser/form04-user.component.html
@@ -24,6 +24,11 @@
 
     <div class="col-6">
         <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Email</mat-label>
+            <input [value]="currentUser.email" (blur)="EmailChange($event)" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
             <mat-label>Contact No</mat-label>
             <input [value]="currentUser.contactNo" (blur)="ContactChange($event)" matInput>
         </mat-form-field>
@@ -61,6 +66,11 @@
         <ng-container matColumnDef="firstName">
             <th mat-header-cell *matHeaderCellDef> First Name </th>
             <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="userTypeId">
+            <th mat-header-cell *matHeaderCellDef> User Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.userTypeId}} </td>
         </ng-container>
 
         <ng-container matColumnDef="lastName">
