refactor shared items

--- a/src/form/p04-setting/form-lv2UserType/form04-usertype.component.html
+++ b/src/form/p04-setting/form-lv2UserType/form04-usertype.component.html
@@ -1,47 +1,29 @@
 <p>{{title04}}</p>
 
 <div class="d-flex">  
-    <div class="col-6">
-        <div class="col-12">             
-            <div>
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Customer Name</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            <div>
-
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Contact No</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div> 
-                
-            <div>
-
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Customer Area</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div>
-            </div>
-        </div> 
+    <div class="col-6">     
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Id</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+    </div>
+    <div class="col-6">    
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>User Type</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
     </div>
 
-    <div class="col-6">
-        <div>
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Address</mat-label>
-                <textarea style="height: 150px;" matInput></textarea>
-            </mat-form-field>
-        </div>
 
-        <div>
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Description</mat-label>
-                <textarea style="height: 150px;" matInput></textarea>
-            </mat-form-field>
-        </div>
-    </div>    
+
+
+
+
+
 </div>
 
 <div class="col-12">
