--- a/src/form/p04-setting/form-lv2UserType/form04-usertype.component.html
+++ b/src/form/p04-setting/form-lv2UserType/form04-usertype.component.html
@@ -5,7 +5,7 @@
         <div>
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Id</mat-label>
-                <input matInput>
+                <input [value]="currentUserType.id"(change)="IdChange($event)" matInput>
             </mat-form-field>
         </div>
     </div>
@@ -13,18 +13,18 @@
         <div>
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>User Type</mat-label>
-                <input matInput>
+                <input [value]="currentUserType.userType"(change)="UserTypeChange($event)" matInput>
             </mat-form-field>
         </div>
     </div>
-
-
-
-
-
-
-
 </div>
+<div class="d-flex">
+    <div class="ml-4">
+        <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
+        <button class="btn btn-danger" (click)="clear()">Clear</button>
+    </div>
+</div>
+
 
 <div class="col-12">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
@@ -35,13 +35,19 @@
         <!-- Position Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp; {{element.id}} 
+            </td>
+  
         </ng-container>
-        
+
+
         <!-- Name Column -->
-        <ng-container matColumnDef="user_type">
+        <ng-container matColumnDef="userType">
             <th mat-header-cell *matHeaderCellDef> User Type </th>
-            <td mat-cell *matCellDef="let element"> {{element.user_type}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.userType}} </td>
         </ng-container>
                 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
