--- a/src/form/p04-setting/form-lv3AccountHead/form04AccountHead.component.html
+++ b/src/form/p04-setting/form-lv3AccountHead/form04AccountHead.component.html
@@ -1,64 +1,62 @@
-<p>User Registeration</p>
+<p>{{title04}}</p>
 
-<form>  
-<p>Personal Details</p>
-
-        <div class="col-12">  
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Select User Type</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
-           
-            <div>
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Full Name</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Contact No</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <mat-form-field class="col-12" appearance="fill">
-                    <mat-label>Email</mat-label>
-                    <input matInput>
-                </mat-form-field>
-            </div>
-        </div>
-
-<p>Enter Name Password</p>
-    <div class="col-12">  
+<div class="d-flex">  
+    <div class="col-6">     
         <div>
             <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Username</mat-label>
-                <input matInput>
+                <mat-label>Id</mat-label>
+                <input [value]="accHead.id"(change)="IdChange($event)" matInput>
             </mat-form-field>
         </div>
-
-        <div>
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Password</mat-label>
-                <input matInput>
-            </mat-form-field>
-        </div>
-
-        <div>
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Confirm Password</mat-label>
-                <input matInput>
-            </mat-form-field>
-        </div>
-    </div> 
-    <div>
-        <button class="btn btn-primary" type="submit">Register</button>
-        <button class="btn btn-danger">Clear</button>
     </div>
-</form>
+    <div class="col-6">    
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>User Type</mat-label>
+                <input [value]="accHead.accountHeadName"(change)="AccountHeadNameChange($event)" matInput>
+            </mat-form-field>
+        </div>
+    </div>
+</div>
+<div class="d-flex">
+    <div class="ml-4">
+        <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
+        <button class="btn btn-danger" (click)="clear()">Clear</button>
+    </div>
+</div>
+
+
+<div class="col-12">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
+        
+        <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+        
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp; {{element.id}} 
+            </td>
+  
+        </ng-container>
+
+
+        <!-- Name Column -->
+
+        <ng-container matColumnDef="accountHeadName">
+            <th mat-header-cell *matHeaderCellDef> Account Head </th>
+            <td mat-cell *matCellDef="let element"> {{element.accountHeadName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef> Code </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        </ng-container>
+                
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+</div>
+
