[set] AccHead Delete api

--- a/src/form/p04-setting/form-lv3AccountHead/form04AccountHead.component.html
+++ b/src/form/p04-setting/form-lv3AccountHead/form04AccountHead.component.html
@@ -12,7 +12,7 @@
     <div class="col-6">    
         <div>
             <mat-form-field class="col-12" appearance="fill">
-                <mat-label>User Type</mat-label>
+                <mat-label>Account Head</mat-label>
                 <input [value]="accHead.accountHeadName"(change)="AccountHeadNameChange($event)" matInput>
             </mat-form-field>
         </div>
