[set] Account Head page and api

--- a/src/form/p04-setting/form-lv3AccountHead/form04AccountHead.component.html
+++ b/src/form/p04-setting/form-lv3AccountHead/form04AccountHead.component.html
@@ -4,8 +4,8 @@
     <div class="col-6">     
         <div>
             <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Id</mat-label>
-                <input [value]="accHead.id"(change)="IdChange($event)" matInput>
+                <mat-label>Code</mat-label>
+                <input [value]="accHead.code"(change)="codeChange($event)" matInput>
             </mat-form-field>
         </div>
     </div>
