--- a/src/form/p04-setting/form-lv4AccountControl/form04AccountControl.component.html
+++ b/src/form/p04-setting/form-lv4AccountControl/form04AccountControl.component.html
@@ -1,43 +1,75 @@
-<p>form-lv1 works!</p>
-    Sale Payment
+<p>{{title04}}</p>
+
+<div class="d-flex">
+    <div class="col-6">
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Account Control Name</mat-label>
+            <input [value]="accControl.accountControlName" (blur)="AccountControlNameChange($event)" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Account Control Code</mat-label>
+            <input [value]="accControl.code" (blur)="codeChange($event)" matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Select Account Head Type</mat-label>
+            <mat-select [value]="accControl.accountHeadCode" (selectionChange)="AccountHeadCodeChange($event.value)">
+                <div *ngFor="let i of accHeadDropDown">
+                    <mat-option [value]="i.code">{{ i.accountHeadName }}</mat-option>
+                </div>
+            </mat-select>
+        </mat-form-field>
+     </div>
 
     <div class="col-6">
-        <div class="col-12">  
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Select Customer</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
-            </mat-form-field>
+        <!-- <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Email</mat-label>
+            <input [value]="accControl.email" (blur)="EmailChange($event)" matInput>
+        </mat-form-field> -->
+
+
     </div>
-
-    <div class="col-6">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
-
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-          
-            <!-- Position Column -->
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef> ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-            </ng-container>
-          
-            Name Column
-            <ng-container matColumnDef="accountHead">
-              <th mat-header-cell *matHeaderCellDef> Account Header </th>
-              <td mat-cell *matCellDef="let element"> {{element.accountHead}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="user">
-              <th mat-header-cell *matHeaderCellDef> User </th>
-              <td mat-cell *matCellDef="let element"> {{element.user}} </td>
-            </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+</div>
+<div class="d-flex">
+    <div class="ml-4">
+        <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
+        <button class="btn btn-danger" (click)="clear()">Clear</button>
     </div>
+</div>
 
+<div class="col-12">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
+
+        <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp; {{element.id}} 
+            </td>
+  
+        </ng-container>
+
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef> Code </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="accountHeadCode">
+            <th mat-header-cell *matHeaderCellDef> Account Head Code </th>
+            <td mat-cell *matCellDef="let element"> {{element.accountHeadCode}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="accountControlName">
+            <th mat-header-cell *matHeaderCellDef> Account Control Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.accountControlName}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
