--- a/src/form/p03-purchase/form-lv1Supplier/form03-supplier.component.html
+++ b/src/form/p03-purchase/form-lv1Supplier/form03-supplier.component.html
@@ -1,7 +1,7 @@
 <p>form-lv1 works!</p>
 
-<form class="d-flex">  
-    <div class="col-6">
+<!-- <form class="d-flex">   -->
+    <div class="col-12">
         <div class="col-12">  
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select Supplier</mat-label>
@@ -72,38 +72,48 @@
         </div> 
     </div>
 
-    <div class="col-6">
+    <div class="col-12">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
 
             <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
           
             <!-- Position Column -->
-            <ng-container matColumnDef="position">
+            <ng-container matColumnDef="supplierId">
               <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.supplierId}} </td>
             </ng-container>
           
             <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <ng-container matColumnDef="supplierName">
+              <th mat-header-cell *matHeaderCellDef> supplierName </th>
+              <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
             </ng-container>
           
             <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <ng-container matColumnDef="address">
+              <th mat-header-cell *matHeaderCellDef> address </th>
+              <td mat-cell *matCellDef="let element"> {{element.address}} </td>
             </ng-container>
           
             <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef> email </th>
+              <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="contactNo">
+              <th mat-header-cell *matHeaderCellDef> contactNo </th>
+              <td mat-cell *matCellDef="let element"> {{element.contactNo}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+              <th mat-header-cell *matHeaderCellDef> description </th>
+              <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
           
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           </table>
     </div>
-</form>
+<!-- </form> -->
