--- a/src/form/p05-stock/form-lv1product/form05-product.component.html
+++ b/src/form/p05-stock/form-lv1product/form05-product.component.html
@@ -94,7 +94,11 @@
   
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element"> 
+        <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+        &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+        &nbsp; {{element.id}} 
+      </td>
     </ng-container>
   
     <ng-container matColumnDef="catagoryId">
