[Set] Supplier invoice page add dropdown supplier category subaccount and product

--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -1,136 +1,80 @@
 <p>form-lv1 works!</p>
 
-<div class="d-flex">   
-    <div class="col-3">
-        <div class="d-flex flex-column">
-            <mat-form-field appearance="fill">
-                <mat-label>Category</mat-label>
-                <mat-select [value]="currentProduct.catagoryId" (selectionChange)="categoryChange($event.value)">
-                    <div *ngFor="let i of categoryDropDown">
-                        <mat-option [value]="i.id">{{ i.categoryName }}</mat-option>
+<form class="d-flex">  
+    <div class="col-6">
+        <div class="col-12">  
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Select Supplier</mat-label>
+                <mat-select>
+                    <div *ngFor="let i of supplierDropDown">
+                        <mat-option [value]="i.supplierId">{{i.supplierName}}</mat-option>
                     </div>
                 </mat-select>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
-                <mat-label>product Name</mat-label>
-                <input [value]="currentProduct.productName" (blur)="productNameChange($event)" matInput>
+            <mat-form-field class="col-6" appearance="fill">
+                <mat-label>Select Category</mat-label>
+                <mat-select>
+                    <div *ngFor="let i of categoryDropDown">
+                        <mat-option [value]="i.id">{{i.categoryName}}</mat-option>
+                    </div>
+                </mat-select>
+            </mat-form-field>
+            
+            <mat-form-field class="col-6" appearance="fill">
+                <mat-label>Select Product</mat-label>
+                <mat-select>
+                    <div *ngFor="let i of productDropDown">
+                        <mat-option [value]="i.productId">{{i.productName}}</mat-option>
+                    </div>
+                </mat-select>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
-                <mat-label>Quantity</mat-label>
-                <input [value]="currentProduct.quantity" (blur)="quantityChange($event)" matInput>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Select Account</mat-label>
+                <mat-select>
+                    <div *ngFor="let i of subAccountDropDown">
+                        <mat-option [value]="i.id">{{i.accountSubcontrolName}}</mat-option>
+                    </div>
+                </mat-select>
             </mat-form-field>
-            
-            <mat-form-field appearance="fill">
-                <mat-label>Sale Unit Price</mat-label>
-                <input [value]="currentProduct.salePrice" (blur)="salePriceChange($event)" matInput>
-            </mat-form-field>
-            
-            <mat-form-field appearance="fill">
-                <mat-label>Purchase Unit Price</mat-label>
-                <input [value]="currentProduct.currentPurchasePrice" (blur)="currentPriceChange($event)" matInput>
-            </mat-form-field>
-            
-            <mat-form-field appearance="fill">
-                <mat-label>Stock Threshold</mat-label>
-                <input [value]="currentProduct.stockThresholdQty" (blur)="thresholdChange($event)" matInput>
-            </mat-form-field>
-        </div>
+
+            <div>
+                <mat-form-field class="col-6" appearance="fill">
+                    <mat-label>Expiry Date</mat-label>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                  </mat-form-field>
+                  
+                  <mat-form-field class="col-6" appearance="fill">
+                    <mat-label>ManuFactured Date</mat-label>
+                    <input matInput [matDatepicker]="picker1">
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                  </mat-form-field>     
+            </div>
+
+            <div>
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Sale Unit Price</mat-label>
+                    <input matInput>
+                </mat-form-field>
+                
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Purchase Unit Price</mat-label>
+                    <input matInput>
+                </mat-form-field>
+                
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Stock Threshold</mat-label>
+                    <input matInput>
+                </mat-form-field>
+            </div>
+        </div> 
     </div>
 
-    <div class="col-3">
-        <div class="d-flex flex-column">
 
-
-              <mat-form-field appearance="fill">
-                <mat-label>Expiry Date</mat-label>
-                <input (dateInput)="manuDateChange($event.value)" matInput [matDatepicker]="expiryDate">
-                <mat-datepicker-toggle matSuffix [for]="expiryDate"></mat-datepicker-toggle>
-                <mat-datepicker #expiryDate></mat-datepicker>
-                <mat-hint>MM/DD/YYYY</mat-hint>
-              </mat-form-field>  
-              
-              <mat-form-field appearance="fill">
-                <mat-label>ManuFactured Date</mat-label>
-                <input (dateInput)="manuDateChange($event.value)" matInput [matDatepicker]="manuDate">
-                <mat-datepicker-toggle matSuffix [for]="manuDate"></mat-datepicker-toggle>
-                <mat-datepicker #manuDate></mat-datepicker>
-                <mat-hint>MM/DD/YYYY</mat-hint>
-              </mat-form-field>           
-             
-            <mat-form-field appearance="fill">
-                <mat-label>Description</mat-label>
-                <textarea style="height: 150px;" [value]="currentProduct.description" (blur)="descriptionChange($event)" matInput></textarea>
-            </mat-form-field>       
-        </div>
-    </div>
-
-    <div class="d-flex flex-column justify-content-between">
-        <div class="d-flex flex-column">
-            <div><button style="width: 80px;" class="btn btn-primary" (click)="register()" >Save</button></div>
-            <div><button style="width: 80px;" class="btn btn-info" >Update</button></div>
-            <div><button style="width: 80px;" class="btn btn-warning" (click)="clear()">Clear</button></div>
-            <div><button style="width: 80px;" class="btn btn-danger" >Cancel</button></div>
-            
-            
-        </div>
-        
-        <div class="mb-4"><button class="btn btn-danger" >Print Catalog</button></div>
-    </div>
-</div>
-
-<div class="d-flex">
-    <mat-form-field appearance="fill">
-        <mat-label>Search</mat-label>
-        <input matInput>
-    </mat-form-field>
-</div>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> 
-        <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
-        &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
-        &nbsp; {{element.id}} 
-      </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="catagoryId">
-      <th mat-header-cell *matHeaderCellDef> catagoryId </th>
-      <td mat-cell *matCellDef="let element"> {{element.catagoryId}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="productName">
-      <th mat-header-cell *matHeaderCellDef> Product Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef> Quantity </th>
-      <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="salePrice">
-      <th mat-header-cell *matHeaderCellDef> SalePrice </th>
-      <td mat-cell *matCellDef="let element"> {{element.salePrice}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="currentPurchasePrice">
-      <th mat-header-cell *matHeaderCellDef> Purchase Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.currentPurchasePrice}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+</form>
