--- a/src/pages/p00-main/p00-main.component.html
+++ b/src/pages/p00-main/p00-main.component.html
@@ -2,7 +2,11 @@
     <p>p00-main works!</p>
 </div>
 <div class="d-flex justify-content-center">
-    <div class="col-10">
+    <div *ngIf="!home" class="col-10">
         <app-main-page-grid [btnImport]="btnImport" ></app-main-page-grid>    
+    </div>
+
+    <div *ngIf="home">
+        <app-draggable></app-draggable>
     </div>
 </div>
